--- a/LLM_Nada-Abi_Folly-Dogba.ipynb
+++ b/LLM_Nada-Abi_Folly-Dogba.ipynb
@@ -2,20 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "d6404de3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.nn import functional as F\n",
+    "\n",
+    "import time\n",
+    "import re, collections\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import tqdm\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "315de967",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "Device utilisé : cuda\n"
      ]
     }
    ],
    "source": [
-    "print(13)"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Device utilisé : {device}\")"
    ]
   }
  ],
