--- a/LLM_Nada-Abi_Folly-Dogba.ipynb
+++ b/LLM_Nada-Abi_Folly-Dogba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "d6404de3",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "315de967",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "4193f5a3",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "dbac669f",
    "metadata": {},
    "outputs": [],
@@ -183,29 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "29d0f0f8",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Num merges: 1000: 100%|██████████| 1000/1000 [01:29<00:00, 11.19it/s]\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de tokens trouvés : 1014\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Tokenizing text: 100%|██████████| 1115394/1115394 [00:58<00:00, 19223.29it/s]\n"
+      "Loading tokenized data from file\n",
+      "Loading tokenized data from file\n"
      ]
     }
    ],
@@ -217,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "id": "0d5533a4",
    "metadata": {},
    "outputs": [
@@ -231,6 +218,144 @@
    ],
    "source": [
     "print(len(tokens))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "f87c6e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['First', ' ', 'Citizen:', '\\n', 'Be', 'fore', ' ', 'we', ' ', 'pro', 'ce', 'ed', ' ', 'any', ' ', 'f', 'ur', 'ther', ',', ' ', 'hear', ' ', 'me', ' ', 'speak', '.', '\\n', '\\n', 'All', ':', '\\n', 'S', 'pe', 'ak', ',', ' ', 'speak', '.', '\\n', '\\n', 'First', ' ', 'Citizen:', '\\n', 'You', ' ', 'are', ' ', 'all', ' ', 'res', 'ol', 'ved', ' ', 'ra', 'ther', ' ', 'to', ' ', 'die', ' ', 'than', ' ', 'to', ' ', 'fa', 'mis', 'h', '?', '\\n', '\\n', 'All', ':', '\\n', 'R', 'es', 'ol', 'ved', '.', ' ', 'res', 'ol', 'ved', '.', '\\n', '\\n', 'First', ' ', 'Citizen:', '\\n', 'First', ',', ' ', 'you', ' ', 'know', ' ', 'C', 'a', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tokenized_text[:100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6d9ac26",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# CharDataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0ff1d843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CharDataset(Dataset):\n",
+    "    \"\"\" This class is used to create a PyTorch dataset from the tokenized text. \"\"\"\n",
+    "    def __init__(self, tokenized_text, tokens, block_size = 32):\n",
+    "\n",
+    "        chars = list(tokens.keys())\n",
+    "\n",
+    "        self.stoi = {ch: i for i, ch in enumerate(chars)}\n",
+    "        self.itos = {i: ch for i, ch in enumerate(chars)}\n",
+    "\n",
+    "        self.dataset = torch.tensor([self.stoi[ch] for ch in tokenized_text], dtype=torch.long)\n",
+    "        self.set_data_mode()\n",
+    "\n",
+    "        \n",
+    "        self.vocab_size = len(chars)\n",
+    "        self.block_size = block_size\n",
+    "\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        \"\"\" Return the number of blocks in the dataset, used by the DataLoader. \"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "        return len(self.data) - self.block_size\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        \"\"\" Return the input and target sequence. \"\"\"\n",
+    "        chunk = self.data[idx:idx + self.block_size + 1]\n",
+    "        input_chunk = chunk[:-1]\n",
+    "        target = chunk[1:]\n",
+    "        return input_chunk, target\n",
+    "\n",
+    "    def get_vocab_size(self):\n",
+    "        \"\"\" Return the size of the vocabulary. \"\"\"\n",
+    "        return self.vocab_size\n",
+    "\n",
+    "    def get_stoi(self):\n",
+    "        return self.stoi\n",
+    "\n",
+    "    def get_itos(self):\n",
+    "        return self.itos\n",
+    "    \n",
+    "    def set_data_mode(self, train_mode = True):\n",
+    "        train_len = int(10/11 * len(self.dataset))\n",
+    "\n",
+    "        if train_mode:\n",
+    "            self.data = self.dataset[:train_len]\n",
+    "        else:\n",
+    "            self.data = self.dataset[train_len:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "460f3588",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = CharDataset(tokenized_text, tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "effe5f30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "520780"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset.data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c3d952fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52078"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.set_data_mode(train_mode = False)\n",
+    "len(dataset.data)"
    ]
   }
  ],
