--- a/LLM_Nada-Abi_Folly-Dogba.ipynb
+++ b/LLM_Nada-Abi_Folly-Dogba.ipynb
@@ -426,6 +426,357 @@
     "plt.imshow(P.pe.squeeze(0), aspect='auto')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1ab8c67",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "bf9cc5bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CausalSelfAttention(nn.Module):\n",
+    "    def __init__(self, n_embd, n_head,n_red, dropout):\n",
+    "        super().__init__()\n",
+    "        self.test = n_red   # réduire la dimensionnalité de query et key\n",
+    "        self.n_head = n_head\n",
+    "        self.key = nn.Linear(n_embd, n_embd // self.test)\n",
+    "        self.query = nn.Linear(n_embd, n_embd // self.test)\n",
+    "        self.value = nn.Linear(n_embd, n_embd)\n",
+    "        #self.proj = nn.Linear(n_embd, n_embd) # Je ne suis pas sûr de cette ligne\n",
+    "\n",
+    "        # empêchent le modèle de trop se concentrer sur un certain token durant l'entraînemen\n",
+    "        self.attn_drop = nn.Dropout(dropout)  # Will be used to help model not focusng on a specific token during training\n",
+    "        self.resid_drop = nn.Dropout(dropout)\n",
+    "\n",
+    "        #  Cela enregistre un \"mask\" (un masque triangulaire inférieur) qui est utilisé dans l'attention causale pour éviter que chaque position d'un token puisse voir les futurs tokens.\n",
+    "        self.register_buffer(\"mask\", torch.tril(torch.ones(1024, 1024)).view(1, 1, 1024, 1024))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B, T, C = x.size()\n",
+    "\n",
+    "        q, k, v = self.query(x), self.key(x), self.value(x)\n",
+    "\n",
+    "        # \n",
+    "        q = q.view(B, T, self.n_head, C // (self.test*self.n_head)).transpose(1, 2)\n",
+    "        k = k.view(B, T, self.n_head, C // (self.test*self.n_head)).transpose(1, 2)\n",
+    "        v = v.view(B, T, self.n_head, C // self.n_head).transpose(1, 2)\n",
+    "        \n",
+    "        att = (q @ k.transpose(-2, -1)) * (1.0 / (k.size(-1) ** 0.5))  # scaling\n",
+    "        att = att.masked_fill(self.mask[:, :, :T, :T] == 0, float('-inf'))  # application du masque\n",
+    "        att = nn.functional.softmax(att, dim=-1)    # normalisation\n",
+    "        att = self.attn_drop(att)                   # éviter surapprentissage\n",
+    "        y = att @ v\n",
+    "        y = y.transpose(1, 2).contiguous().view(B, T, C)\n",
+    "        y = self.resid_drop(y)\n",
+    "        return y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8871897a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Transformer block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "6d1464fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformerBlock(nn.Module):\n",
+    "    \"\"\" This class is used to define a transformer block wich is self attention followed by a feed forward neural network. \"\"\"\n",
+    "    def __init__(self, n_embd, n_head, n_red, dropout, factor=4):\n",
+    "        super().__init__()\n",
+    "        self.attention = CausalSelfAttention(n_embd, n_head, n_red, dropout)\n",
+    "        self.mlp = nn.Sequential(\n",
+    "            nn.Linear(n_embd, n_embd * factor),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(n_embd * factor, n_embd),  \n",
+    "            nn.Dropout(dropout)\n",
+    "        )\n",
+    "        self.ln1 = nn.LayerNorm(n_embd)\n",
+    "        self.ln2 = nn.LayerNorm(n_embd)\n",
+    "    \n",
+    "\n",
+    "    #\n",
+    "    def forward(self, x):\n",
+    "        x = x + self.attention(self.ln1(x))\n",
+    "        x = x + self.mlp(self.ln2(x))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d7687cb",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# GPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "a3030e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class GPT(nn.Module):\n",
+    "    \"\"\" This class is used to define the GPT model. \"\"\"\n",
+    "    def __init__(self, vocab_size, block_size, n_embd, n_layer, n_head,n_red, dropout=0.2):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding = nn.Embedding(vocab_size, n_embd) # Embedding layer\n",
+    "        self.position_embedding = PositionalEncoding(n_embd)\n",
+    "        self.layers = nn.ModuleList([ # List of transformer blocks\n",
+    "            TransformerBlock(n_embd, n_head,n_red, dropout) for _ in range(n_layer)\n",
+    "        ])\n",
+    "        self.layer_norm = nn.LayerNorm(n_embd)\n",
+    "        self.lm_head = nn.Linear(n_embd, vocab_size) # Output layer to predict the next token\n",
+    "\n",
+    "    def forward(self, idx):\n",
+    "        B, T = idx.size()\n",
+    "        tok_emb = self.token_embedding(idx)\n",
+    "        pos_emb = self.position_embedding(idx)\n",
+    "        x = tok_emb + pos_emb\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        x = self.layer_norm(x)\n",
+    "        logits = self.lm_head(x)\n",
+    "        return logits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e7826a",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Validation Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e3ee96ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def current_loss(model, dataset, batch_size, device,numpasses,Train_mode = True):\n",
+    "    model.to(device)\n",
+    "    model.eval()\n",
+    "    dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+    "    total_loss = 0\n",
+    "    count = 0\n",
+    "\n",
+    "    dataset.set_data_mode(Train_mode)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, targets in dataloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "            logits = model(inputs)\n",
+    "            logits = logits.view(-1, logits.size(-1))\n",
+    "            targets = targets.view(-1)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "            total_loss += loss.item()\n",
+    "            \n",
+    "            count += 1\n",
+    "            if count >= numpasses:\n",
+    "                break\n",
+    "\n",
+    "    \n",
+    "    dataset.set_data_mode()\n",
+    "    return total_loss / numpasses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1df0a161",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Train function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "db0be268",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_wrt_iters(model, dataset, batch_size, max_iters, lr, device,letter):\n",
+    "\n",
+    "    model.to(device)\n",
+    "\n",
+    "    iters = 0\n",
+    "    train_losses = []\n",
+    "    test_losses = []\n",
+    "\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "    \n",
+    "    dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size,shuffle=True)\n",
+    "\n",
+    "    with tqdm.tqdm(total=max_iters, position=0, leave=True) as pbar:\n",
+    "        for inputs, targets in dataloader:\n",
+    "\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "\n",
+    "            logits = model(inputs)\n",
+    "\n",
+    "            logits = logits.view(-1, logits.size(-1))\n",
+    "            targets = targets.view(-1)\n",
+    "\n",
+    "            optimizer.zero_grad()\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "            loss.backward()\n",
+    "\n",
+    "            optimizer.step()\n",
+    "\n",
+    "            if iters % 100 == 0:\n",
+    "                train_losses.append(current_loss(model, dataset,batch_size, device,10))\n",
+    "                test_losses.append(current_loss(model, dataset,batch_size, device,10,Train_mode = False))\n",
+    "\n",
+    "            if iters % 1000 == 0:\n",
+    "                torch.save(model.state_dict(), './saved_models/{}model_{}.pt'.format(letter,iters))\n",
+    "\n",
+    "            iters += 1\n",
+    "            if iters > max_iters:\n",
+    "                break\n",
+    "\n",
+    "            \n",
+    "            pbar.update()\n",
+    "    return train_losses, test_losses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "562cf642",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PARAMETERS SAVING FUNCTION\n",
+    "\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "def save_params(file_path, params: dict, force=False):\n",
+    "    if not force and os.path.exists(file_path):\n",
+    "        raise FileExistsError(\"File already exists\")\n",
+    "        \n",
+    "    file = open(file_path, 'w', encoding='utf-8')\n",
+    "    json.dump(params, file)\n",
+    "    file.close()\n",
+    "\n",
+    "def load_params(file_path):\n",
+    "    file = open(file_path, 'r', encoding='utf-8')\n",
+    "    data = json.load(file)\n",
+    "    file.close()\n",
+    "\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88fa00d1",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Acuracy function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "32770801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Accuracy(model , dataset,train_data = False, second_best = False):\n",
+    "    model.to(device)\n",
+    "    model.eval()\n",
+    "    dataset.set_data_mode(train_mode = train_data)\n",
+    "    \n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    t0 = time.time()\n",
+    "\n",
+    "    dataloader = DataLoader(dataset, batch_size=100, shuffle=True, pin_memory=True)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "\n",
+    "        for inputs, targets in dataloader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "            logits = model(inputs)\n",
+    "            logits = logits.view(-1, logits.size(-1))\n",
+    "            targets = targets.view(-1)\n",
+    "            \n",
+    "            _, predicted = torch.max(logits, 1)\n",
+    "            correct += (predicted == targets).sum().item()\n",
+    "\n",
+    "            if second_best :\n",
+    "                logits[:,predicted] = -float('inf')\n",
+    "                _, predicted2 = torch.max(logits, 1)\n",
+    "                correct += (predicted2 == targets).sum().item()\n",
+    "\n",
+    "            total += targets.size(0)\n",
+    "            if time.time() - t0 > 4:\n",
+    "                break\n",
+    "\n",
+    "    return round(correct / total, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63663294",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Generate function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "51101d0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text generation function\n",
+    "def generate_text(model, start_text, length, stoi, itos, block_size, device):\n",
+    "    model.eval()\n",
+    "    context = torch.tensor([stoi[c] for c in start_text], dtype=torch.long, device=device).unsqueeze(0)\n",
+    "    generated = context.tolist()[0]\n",
+    "    with torch.no_grad():\n",
+    "        for _ in range(length):\n",
+    "            logits = model(context)\n",
+    "            logits = logits[:, -1, :]\n",
+    "            probs = nn.functional.softmax(logits, dim=-1)\n",
+    "            next_token = torch.multinomial(probs, num_samples=1).item()\n",
+    "            generated.append(next_token)\n",
+    "            context = torch.tensor(generated[-block_size:], dtype=torch.long, device=device).unsqueeze(0)\n",
+    "    return ''.join(itos[i] for i in generated)"
+   ]
   }
  ],
  "metadata": {
