--- a/LLM_Nada-Abi_Folly-Dogba.ipynb
+++ b/LLM_Nada-Abi_Folly-Dogba.ipynb
@@ -777,6 +777,51 @@
     "            context = torch.tensor(generated[-block_size:], dtype=torch.long, device=device).unsqueeze(0)\n",
     "    return ''.join(itos[i] for i in generated)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34053e06",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "---\n",
+    "# Training our model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "87380d70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de paramètres du modèle : 53538294\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configurations\n",
+    "block_size = 128\n",
+    "batch_size = 64\n",
+    "n_red = 1\n",
+    "n_embd = 2*384  # Attention : n_reduction * n_head doit diviser n_embd\n",
+    "n_layer = 8\n",
+    "n_head = 6   # Nombre de têtes d'attention (N'affecte pas la vitesse)\n",
+    "n_steps = 6000\n",
+    "lr = 3e-4\n",
+    "\n",
+    "# Initialisation du modèle\n",
+    "model = GPT(vocab_size=len(tokens), block_size=block_size, n_embd=n_embd, n_layer=n_layer, n_head=n_head,n_red=n_red)\n",
+    "\n",
+    "dataset = CharDataset(tokenized_text, tokens, block_size=block_size)\n",
+    "\n",
+    "nb_params = sum([param.view(-1).size()[0] for param in model.parameters()])\n",
+    "\n",
+    "print(f\"Nombre de paramètres du modèle : {nb_params}\")"
+   ]
   }
  ],
  "metadata": {
