add some change in the code

--- a/LLM_Nada-Abi_Folly-Dogba.ipynb
+++ b/LLM_Nada-Abi_Folly-Dogba.ipynb
@@ -668,16 +668,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "562cf642",
    "metadata": {},
    "outputs": [],
    "source": [
-    "### PARAMETERS SAVING FUNCTION\n",
-    "\n",
+    "# PARAMETERS SAVING FUNCTION\n",
     "import json\n",
-    "\n",
-    "\n",
     "def save_params(file_path, params: dict, force=False):\n",
     "    if not force and os.path.exists(file_path):\n",
     "        raise FileExistsError(\"File already exists\")\n",
@@ -706,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "32770801",
    "metadata": {},
    "outputs": [],
@@ -714,16 +711,12 @@
     "def Accuracy(model , dataset,train_data = False, second_best = False):\n",
     "    model.to(device)\n",
     "    model.eval()\n",
-    "    dataset.set_data_mode(train_mode = train_data)\n",
-    "    \n",
+    "    dataset.set_data_mode(train_mode= train_data)\n",
     "    correct = 0\n",
     "    total = 0\n",
     "    t0 = time.time()\n",
-    "\n",
     "    dataloader = DataLoader(dataset, batch_size=100, shuffle=True, pin_memory=True)\n",
-    "\n",
     "    with torch.no_grad():\n",
-    "\n",
     "        for inputs, targets in dataloader:\n",
     "            inputs, targets = inputs.to(device), targets.to(device)\n",
     "            logits = model(inputs)\n",
@@ -790,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "87380d70",
    "metadata": {},
    "outputs": [
@@ -805,9 +798,13 @@
    "source": [
     "# Configurations\n",
     "block_size = 128\n",
+    "\n",
     "batch_size = 64\n",
+    "\n",
     "n_red = 1\n",
+    "\n",
     "n_embd = 2*384  # Attention : n_reduction * n_head doit diviser n_embd\n",
+    "\n",
     "n_layer = 8\n",
     "n_head = 6   # Nombre de têtes d'attention (N'affecte pas la vitesse)\n",
     "n_steps = 6000\n",
